kubernetes/frontend/frontend-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  gateways:
    - gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            exact: /
        - uri:
            exact: /favicon.ico
        - uri:
            prefix: /static/
      route:
        - destination:
            host: frontend
            port:
              number: 7200
